# cppMinimal

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
scripts/: clean  fix  generate  install  pragma_those_headers.py  uninstall
src/: CMakeLists.txt  pch.h
